--- a/server/realtimeapp/config/local.ini
+++ b/server/realtimeapp/config/local.ini
@@ -1,5 +1,19 @@
-[httpd]
-bind_address = 0.0.0.0
-
 [chttpd]
 bind_address = 0.0.0.0
+port = 5984
+
+[httpd]
+bind_address = 0.0.0.0
+port = 5986
+
+[couchdb]
+uuid = 0b034325f33f453fabfb4de6d2e4fb1b
+database_dir = /home/server/externals/db
+view_index_dir = /home/server/externals/idx
+
+[admins]
+root = test123
+
+[couch_httpd_auth]
+require_valid_user = true
+secret = 442acb3e7ad54007a305a80b5a0a20e0
