Not stable - Snapshotting screen usage

--- a/server/arch/Dockerfile
+++ b/server/arch/Dockerfile
@@ -6,14 +6,30 @@ MAINTAINER Falco Prescher
 LABEL version="1.0"
 LABEL description="This is a image for installing the latest arch linux."
 
-ENV "TERM"="dumb"
-ENV "COUCHDB_VERSION"="2.0.0"
+ENV "TERM"="xterm"
+ENV "SERVERDIR"="/home/server"
+ENV "EXTERNALS"=$SERVERDIR/externals
+
+WORKDIR $SERVERDIR
+
+VOLUME $EXTERNALS
 
 #RUN pacman -S archlinux-keyring --noconfirm
-RUN pacman -Syu --noconfirm
+RUN pacman -Syu --noconfirm && RUN pacman -S fakeroot make cmake gcc vim screen git --noconfirm
+
+RUN groupadd -r server &&`
+    useradd -d $SERVERDIR -g server server &&`
+    chown -R server:server $SERVERDIR &&`
+    chmod 750 $SERVERDIR
+
+USER server
+RUN git clone https://aur.archlinux.org/tini.git && cd tini && makepkg
+
+USER root
+RUN cd tini && pacman -U ./tini*.pkg.tar.xz --noconfirm && cd ../..
 
 #Clearing cached packages and its index
-RUN pacman -Scc --noconfirm
+RUN pacman -Scc --noconfirm && rm -R /var/cache/pacman/pkg && rm -R tini
 
 ENTRYPOINT ["/bin/bash"]
 # ENTRYPOINT ["top", "-b"]
