Partition application and database server; Using docker-compose

--- a/server/realtimeapp_db/Dockerfile
+++ b/server/realtimeapp_db/Dockerfile
@@ -7,18 +7,16 @@ LABEL version="1.0"
 LABEL description="This is a image for installing a couch database based upon the latest arch linux."
 
 USER root
-RUN pacman -Syy --noconfirm && pacman -S npm couchdb --noconfirm
+RUN pacman -Syy --noconfirm && pacman -S couchdb --noconfirm
 
-#Clearing cached packages and its index
-RUN pacman -Scc --noconfirm
+RUN pacman -Scc --noconfirm && rm -R /var/cache/pacman/pkg
 
 #Copy couchdb configuration
 COPY ./config/local.ini /etc/couchdb/local.ini
 COPY ./config/vm.args /etc/couchdb/vm.args
 
 COPY ./config/install_server.sh .
-RUN ./install_server.sh &&`
-    rm ./install_server.sh
+RUN chmod +x ./install_server.sh && ./install_server.sh && rm ./install_server.sh
 
 # CouchDB
 EXPOSE 5984 5986
