Basic logging with fluentd

--- a/server/application.yml
+++ b/server/application.yml
@@ -20,6 +20,13 @@ services:
       - ${COUCHDBEXTERNALSVOLUMEDIR}:/home/server/externals:rw
     mem_limit: 512M
     memswap_limit: 1G
+    logging:
+      driver: fluentd
+      #driver: json-file
+      options:
+        #fluentd-address: "localhost:24224"
+        tag: "docker.couchdb.{{.Name}}"
+        #fluentd-async-connect: "true"
   node:
     image: falco/realtimeapp_node:latest
     build:
@@ -33,3 +40,10 @@ services:
     volumes:
       - ${NODEEXTERNALSVOLUMEDIR}:/home/server/externals:rw
     mem_limit: 512M
+    logging:
+      driver: fluentd
+      #driver: json-file
+      options:
+        #fluentd-address: "localhost:24224"
+        tag: "docker.node.{{.Name}}"
+        #fluentd-async-connect: "true"
