--- a/server/realtimeapp_fluentd/config/fluentd.conf
+++ b/server/realtimeapp_fluentd/config/fluentd.conf
@@ -11,22 +11,37 @@
 </filter>
 
 <label @mainstream>
-  <match docker.**>
+  <match docker.node.**>
     @type file
-    @id   output_docker1
-    path         /fluentd/log/docker.*.log
+    @id   output_node_docker1
+    path         /fluentd/log/docker.node.log
     append       true
-    time_slice_format %Y%m%d
-    time_slice_wait   1m
+    time_slice_format %Y%m%d_%H%M%S
+    time_slice_wait   10s
     time_format       %Y%m%dT%H%M%S%z
+    compress gzip
+    utc
   </match>
-  <match **>
+  <match docker.cochdb.**>
     @type file
-    @id   output1
-    path         /fluentd/log/data.*.log
+    @id   output_couchdb_docker1
+    path         /fluentd/log/docker.couchdb.log
     append       true
-    time_slice_format %Y%m%d
-    time_slice_wait   10m
+    time_slice_format %Y%m%d_%H%M%S
+    time_slice_wait   10s
     time_format       %Y%m%dT%H%M%S%z
+    compress gzip
+    utc
+  </match>
+#  <match **>
+#    @type file
+#    @id   output1
+#    path         /fluentd/log/data.log
+#    append       true
+#    time_slice_format %Y%m%d_%H%M
+#    time_slice_wait   10m
+#    time_format       %Y%m%dT%H%M%S%z
+#    compress gzip
+#    utc
   </match>
 </label>
