--- a/simplechat/server/package.json
+++ b/simplechat/server/package.json
@@ -4,7 +4,7 @@
   "description": "A simple chat server using web sockets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "Chat",
