--- a/simplechat/blessedconsoleclient/package.json
+++ b/simplechat/blessedconsoleclient/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "SimpleConsoleChatClient",
+  "name": "blessedconsoleclient",
   "version": "0.0.1",
-  "description": "A simple console chat client",
+  "description": "TUI console client for a chat",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,11 +9,14 @@
   "keywords": [
     "Chat",
     "Client",
-    "Simple"
+    "Blessed",
+    "TUI",
+    "Sockets"
   ],
   "author": "Falco Prescher",
   "license": "MIT",
   "dependencies": {
-    "socket.io-client": "^1.3.7"
+    "blessed": "^0.1.81",
+    "socket.io-client": "^1.5.1"
   }
 }
