--- a/simplechatrooms/server/package.json
+++ b/simplechatrooms/server/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "SimpleChatWebClient",
+  "name": "SimpleChatServer",
   "version": "0.0.1",
-  "description": "Simple chat web client",
+  "description": "A simple chat server using web sockets",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [
     "Chat",
-    "Web",
-    "Client"
+    "Server",
+    "Sockets"
   ],
   "author": "Falco",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3",
-    "jquery": "^3.1.1",
-    "socket.io-client": "^1.3.7"
+    "socket.io": "^1.3.7"
   }
 }
