--- a/simplechatrooms/webclient/package.json
+++ b/simplechatrooms/webclient/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jquery": "^3.1.1",
+    "lodash": "^4.16.6",
     "socket.io-client": "^1.3.7"
   }
 }
