--- a/simplechatrooms/server/package.json
+++ b/simplechatrooms/server/package.json
@@ -14,6 +14,8 @@
   "author": "Falco",
   "license": "MIT",
   "dependencies": {
+    "loadash": "0.0.1",
+    "lodash": "^4.16.6",
     "socket.io": "^1.3.7"
   }
 }
