--- a/simplechat/server/package.json
+++ b/simplechat/server/package.json
@@ -14,6 +14,7 @@
   "author": "Falco",
   "license": "MIT",
   "dependencies": {
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "yargs": "^6.3.0"
   }
 }
