--- a/simplechat/webclient/package.json
+++ b/simplechat/webclient/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jquery": "^3.1.1",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "yargs": "^6.3.0"
   }
 }
