--- a/simplechatroomsclustered/server/package.json
+++ b/simplechatroomsclustered/server/package.json
@@ -17,6 +17,7 @@
     "loadash": "0.0.1",
     "lodash": "^4.16.6",
     "socket.io": "^1.3.7",
+    "socket.io-redis": "^1.1.1",
     "yargs": "^6.3.0"
   }
 }
