--- a/simplechatroomsclustered/proxyandloadbalancer/nginx.conf
+++ b/simplechatroomsclustered/proxyandloadbalancer/nginx.conf
@@ -5,18 +5,27 @@ events {
 }
 
 http {
-  upstream node-app {
-    least_conn;
-    server websocketserver_1:81 weight=10 max_fails=3 fail_timeout=30s;
-    server websocketserver_2:81 weight=10 max_fails=3 fail_timeout=30s;
-    server websocketserver_3:81 weight=10 max_fails=3 fail_timeout=30s;
-    server websocketserver_4:81 weight=10 max_fails=3 fail_timeout=30s;
+  upstream websocketserver {
+    ##least_conn;
+    ##server simplechatroomsclustered_websocketserver_1:81 max_fails=3 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_2:81 max_fails=3 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_3:81 max_fails=3 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_4:81 max_fails=3 fail_timeout=30s;
+
+    ip_hash;
+    server simplechatroomsclustered_websocketserver_1:81 max_fails=3 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_2:81 max_fails=3 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_3:81 max_fails=3 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_4:81 max_fails=3 fail_timeout=30s;
   }
 
   server {
+    access_log /etc/nginx/access.log;
+    error_log /etc/nginx/error.log;
+
     listen 81;
     location / {
-      proxy_pass http://localhost;
+      proxy_pass http://websocketserver;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
