--- a/simplechatroomsclustered/consoleclient/package.json
+++ b/simplechatroomsclustered/consoleclient/package.json
@@ -14,6 +14,7 @@
   "author": "Falco Prescher",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.16.6",
     "socket.io-client": "^1.3.7",
     "yargs": "^6.3.0"
   }
