--- a/simplechatroomsclustered/proxyandloadbalancer/nginx.conf
+++ b/simplechatroomsclustered/proxyandloadbalancer/nginx.conf
@@ -7,16 +7,16 @@ events {
 http {
   upstream websocketserver {
     ##least_conn;
-    ##server simplechatroomsclustered_websocketserver_1:81 max_fails=3 fail_timeout=30s;
-    ##server simplechatroomsclustered_websocketserver_2:81 max_fails=3 fail_timeout=30s;
-    ##server simplechatroomsclustered_websocketserver_3:81 max_fails=3 fail_timeout=30s;
-    ##server simplechatroomsclustered_websocketserver_4:81 max_fails=3 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_1:81 max_fails=10 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_2:81 max_fails=10 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_3:81 max_fails=10 fail_timeout=30s;
+    ##server simplechatroomsclustered_websocketserver_4:81 max_fails=10 fail_timeout=30s;
 
     ip_hash;
-    server simplechatroomsclustered_websocketserver_1:81 max_fails=3 fail_timeout=30s;
-    server simplechatroomsclustered_websocketserver_2:81 max_fails=3 fail_timeout=30s;
-    server simplechatroomsclustered_websocketserver_3:81 max_fails=3 fail_timeout=30s;
-    server simplechatroomsclustered_websocketserver_4:81 max_fails=3 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_1:81 weight=1 max_fails=10 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_2:81 weight=1 max_fails=10 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_3:81 weight=1 max_fails=10 fail_timeout=30s;
+    server simplechatroomsclustered_websocketserver_4:81 weight=1 max_fails=10 fail_timeout=30s;
   }
 
   server {
